--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <div class="name">
                         <img width="700px" height="400px" src="./第一页_0001_标题.png" alt="">
                         <div class="start">
-                            <a hret="https://houkecong.github.io/">
+                            <a hret="https://houkecong.github.io/yangkaimei.github.io/">
                             <img width="400px" height="200px" src="./第一页_0000_开始按钮.png" alt="">
                                 </a>
                         </div>
